made some changes to package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "start": "node app"
   },
+  "keywords": [
+    "example",
+    "heroku"
+  ],
   "description": "BetterThanCraigslist",
   "author": {
     "name": ""
